# streamlit_app

./: README.md  main_page.py  plot_dk.py  plot_europe.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
Plot/: network_test.html
pages/: Netværk over Ocean Tech.py
