[tool.poetry]
name = "streamlit-test"
version = "0.1.0"
description = ""
authors = ["Esben <elemminger@amsterdamdatacollective.com>"]
readme = "README.md"
packages = [{include = "streamlit_test"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.3"
requests = "^2.28.2"
matplotlib = "^3.6.3"
geopandas = "^0.12.2"
ipykernel = "^6.21.0"
streamlit = "^1.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
